<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExclusaoActivity">

    <TextView
        android:id="@+id/tvNomeAplicativo"
        android:layout_width="match_parent"
        android:layout_height="100.dp"
        android:layout_marginBottom="27dp"
        android:background="#673AB7"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvDeletar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDeletar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:gravity="center"
        android:text="@string/TV_deletar_produto"
        android:textColor="#673AB7"
        android:textSize="28.sp"
        app:layout_constraintBottom_toTopOf="@+id/tvCodigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNomeAplicativo" />

    <TextView
        android:id="@+id/tvCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="13dp"
        android:text="@string/c_digo_do_produto"
        android:textColor="#673AB7"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/etCodigo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDeletar" />

    <EditText
        android:id="@+id/etCodigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10.dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCodigo" />

    <Button
        android:id="@+id/btnDeletar"
        android:layout_width="150.dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="340dp"
        android:paddingHorizontal="30.dp"
        android:paddingVertical="10.dp"
        android:text="@string/deletar"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnLimpar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="150.dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="340dp"
        android:paddingHorizontal="30.dp"
        android:paddingVertical="10.dp"
        android:text="@string/limpar"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDeletar" />
</androidx.constraintlayout.widget.ConstraintLayout>