<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroActivity">

    <TextView
        android:id="@+id/tvNomeAplicativo"
        android:layout_width="match_parent"
        android:layout_height="100.dp"
        android:background="#673AB7"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCadastrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:gravity="center"
        android:text="@string/tv_cadastrar_produto"
        android:textColor="#673AB7"
        android:textSize="28.sp"
        app:layout_constraintBottom_toTopOf="@+id/tvCodigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNomeAplicativo" />

    <TextView
        android:id="@+id/tvCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="13dp"
        android:text="@string/c_digo_do_produto"
        android:textColor="#673AB7"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/etCodigo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCadastrar" />

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="11dp"
        android:text="@string/nome_do_produto"
        android:textColor="#673AB7"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/etNome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCodigo" />

    <EditText
        android:id="@+id/etCodigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10.dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/tvNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCodigo" />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10.dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/tvDescricao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNome" />

    <TextView
        android:id="@+id/tvDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="11dp"
        android:text="@string/descri_o_do_produto"
        android:textColor="#673AB7"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/etDescricao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNome" />

    <EditText
        android:id="@+id/etDescricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10.dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/tvEstoque"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescricao" />

    <TextView
        android:id="@+id/tvEstoque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="7dp"
        android:text="@string/estoque"
        android:textColor="#673AB7"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/etEstoque"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescricao" />

    <EditText
        android:id="@+id/etEstoque"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10.dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btnLimpar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEstoque" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="150.dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:paddingHorizontal="30.dp"
        android:paddingVertical="10.dp"
        android:text="@string/salvar"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnLimpar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEstoque"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="150.dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:paddingHorizontal="30.dp"
        android:paddingVertical="10.dp"
        android:text="@string/limpar"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSalvar" />
</androidx.constraintlayout.widget.ConstraintLayout>