<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListagemActivity">

    <TextView
        android:id="@+id/tvNomeAplicativo"
        android:layout_width="match_parent"
        android:layout_height="100.dp"
        android:layout_marginBottom="27dp"
        android:background="#673AB7"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvListar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvListar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/tv_lista_de_produtos"
        android:textColor="#673AB7"
        android:textSize="28.sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNomeAplicativo" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="150.dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:paddingHorizontal="30.dp"
        android:paddingVertical="10.dp"
        android:text="@string/voltar"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/listaProdutos"
        android:layout_width="400dp"
        android:layout_height="550dp"
        android:background="#859F88C8"
        android:divider="@android:color/system_accent2_0"
        android:dividerHeight="10.dp"
        android:elevation="5.dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNomeAplicativo"
        app:layout_constraintVertical_bias="0.5"
        app:layout_marginBaseline="10.dp" />

</androidx.constraintlayout.widget.ConstraintLayout>